--- a/src/css/news.css
+++ b/src/css/news.css
@@ -48,19 +48,18 @@ height: 50px;
 list-style-type: none;
 margin: 0;
 padding: 0;
-display: flex; /* Flex container for navigation items */
-justify-content: center; /* Center align the nav links */
+display: flex; 
+justify-content: center; 
 }
 
 .nav-links .dropdown {
 position: relative;
-display: inline-block; /* Keep dropdown inline */
+display: inline-block; 
 margin-right: 20px;
 }
 
-/* Style for the dropdown menu */
 .nav-links .dropdown-content {
-display: none; /* Initially hidden */
+display: none; 
 position: absolute;
 background-color: #08420f;
 min-width: 160px;
@@ -71,9 +70,9 @@ opacity: 0;
 visibility: hidden;
 transform: translateY(20px);
 transition: opacity 0.3s ease, transform 0.3s ease;
-border-radius: 10px;  /* Rounded corners */
-list-style-type: none; /* Remove bullet points */
-display: block; /* Ensures the items are displayed vertically */
+border-radius: 10px;  
+list-style-type: none; 
+display: block; 
 }
 
 .nav-links .dropdown-content a {
@@ -83,12 +82,12 @@ color: white;
 text-decoration: none;
 font-weight: bold;
 transition: background-color 0.3s ease, transform 0.3s ease;
-border-radius: 10px;  /* Rounded corners for dropdown items */
+border-radius: 10px; 
 }
 
 .nav-links .dropdown-content a:hover {
 background-color: #155014;
-transform: scale(1.05); /* Slight scaling effect on hover */
+transform: scale(1.05); 
 }
 
 .nav-links a {
@@ -98,7 +97,7 @@ font-weight: bold;
 margin: 10px;
 transition: color 0.3s ease, background-color 0.3s ease;
 padding: 8px 12px;
-border-radius: 5px; /* Rounded corners for links */
+border-radius: 5px; 
 }
 
 .nav-links a:hover {
@@ -111,12 +110,11 @@ position: relative;
 margin-right: 20px;
 }
 
-/* Display dropdown content when hovering */
 .nav-links li:hover .dropdown-content {
 display: block;
 opacity: 1;
 visibility: visible;
-transform: translateY(0); /* Smooth visibility */
+transform: translateY(0); 
 transition: opacity 0.3s ease, transform 0.3s ease;
 }
 .lang-button {
@@ -233,7 +231,7 @@ main h2 {
 }
 .content1-container {
   display: flex;
-  flex-direction: column; /* Stack elements vertically */
+  flex-direction: column; 
   width: 100%;
   justify-content: flex-start;
   padding: 25px;
@@ -243,15 +241,15 @@ main h2 {
   color: #444;
   }
   .content1-container img {
-    width: 150px; /* Встанови бажану ширину */
-    height: 300px; /* Висота дорівнює ширині */
-    object-fit: cover; /* Зберігає пропорції, заповнюючи квадрат */
-    border-radius: 10%; /* Закруглені кути (можна змінити або прибрати) */
+    width: 150px; 
+    height: 300px; 
+    object-fit: cover; 
+    border-radius: 10%; 
   }
   
 .content1-text {
-  text-align: center; /* Center text if needed */
-  margin-top: 20px; /* Space between images and text */
+  text-align: center; 
+  margin-top: 20px; 
   width: 100%;
   padding: 20px;
   font-size: 18px;
