--- a/src/css/Freshair.css
+++ b/src/css/Freshair.css
@@ -43,79 +43,107 @@
     width: 50px;
     height: 50px;
     }
-  .nav-links {
-list-style-type: none;
-margin: 0;
-padding: 0;
-display: flex; 
-justify-content: center; 
-}
-
-.nav-links .dropdown {
-position: relative;
-display: inline-block;
-margin-right: 20px;
-}
-
-.nav-links .dropdown-content {
-display: none; 
-position: absolute;
-background-color: #08420f;
-min-width: 160px;
-z-index: 1;
-top: 100%;
-left: 0;
-opacity: 0;
-visibility: hidden;
-transform: translateY(20px);
-transition: opacity 0.3s ease, transform 0.3s ease;
-border-radius: 10px;  
-list-style-type: none; 
-display: block; 
-}
-
-.nav-links .dropdown-content a {
-padding: 12px 16px;
-display: block;
-color: white;
-text-decoration: none;
-font-weight: bold;
-transition: background-color 0.3s ease, transform 0.3s ease;
-border-radius: 10px; 
-}
-
-.nav-links .dropdown-content a:hover {
-background-color: #155014;
-transform: scale(1.05); 
-}
-
-.nav-links a {
-color: white;
-text-decoration: none;
-font-weight: bold;
-margin: 10px;
-transition: color 0.3s ease, background-color 0.3s ease;
-padding: 8px 12px;
-border-radius: 5px; 
-}
-
-.nav-links a:hover {
-color: #80e27e;
-background-color: rgba(128, 226, 126, 0.2);
-}
-
-.nav-links li {
-position: relative;
-margin-right: 20px;
-}
-
-.nav-links li:hover .dropdown-content {
-display: block;
-opacity: 1;
-visibility: visible;
-transform: translateY(0); 
-transition: opacity 0.3s ease, transform 0.3s ease;
-}
+    .header1{
+      margin-left: 30px;
+    }
+    #menu__toggle {
+      opacity: 0;
+      position: fixed;
+    }
+    
+    #menu__toggle:checked ~ .menu__btn > span {
+      transform: rotate(45deg);
+      background-color: white;
+    }
+    #menu__toggle:checked ~ .menu__btn > span::before {
+      top: 0;
+      transform: rotate(0);
+      background-color: white;
+    }
+    #menu__toggle:checked ~ .menu__btn > span::after {
+      top: 0;
+      transform: rotate(90deg);
+      background-color: white;
+    }
+    #menu__toggle:checked ~ .menu__box {
+      visibility: visible;
+      left: 0;
+    }
+    
+    .menu__btn {
+      display: flex;
+      align-items: center;
+      position: fixed;
+      top: 20px;
+      left: 20px;
+    
+      width: 26px;
+      height: 26px;
+    
+      cursor: pointer;
+      z-index: 1;
+    }
+    
+    .menu__btn > span,
+    .menu__btn > span::before,
+    .menu__btn > span::after {
+      display: block;
+      position: absolute;
+    
+      width: 100%;
+      height: 2px;
+    
+      background-color: rgb(255, 255, 255);
+    
+      transition-duration: .25s;
+    }
+    .menu__btn > span::before {
+      content: '';
+      top: -8px;
+    }
+    .menu__btn > span::after {
+      content: '';
+      top: 8px;
+    }
+    
+    .menu__box {
+      display: block;
+      position: fixed;
+      visibility: hidden;
+      top: 0;
+      left: -100%;
+    
+      width: 300px;
+      height: 100%;
+    
+      margin: 0;
+      padding: 80px 0;
+    
+      list-style: none;
+    
+      background-color: #388e3c;
+      box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+    
+      transition-duration: .25s;
+    }
+    
+    .menu__item {
+      display: block;
+      padding: 12px 24px;
+    
+      color: white;
+    
+      font-family: 'Roboto', sans-serif;
+      font-size: 20px;
+      font-weight: 600;
+    
+      text-decoration: none;
+    
+      transition-duration: .25s;
+    }
+    .menu__item:hover {
+      background-color: #53d451;
+    }
   .lang-button {
     background-color: #388e3c;
     color: white;
