--- a/src/css/Freshair.css
+++ b/src/css/Freshair.css
@@ -144,6 +144,75 @@
     .menu__item:hover {
       background-color: #53d451;
     }
+    .hills-container {
+      position: relative;
+      width: 100%;
+      height: 600px;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+      overflow: hidden;
+      margin-top: -350px;
+      padding: 0;
+      perspective: 1000px;
+      z-index: 1;
+    }
+    
+    .hills-image {
+      position: absolute;
+      bottom: 0;
+      width: auto;
+      height: 200px;
+      display: block;
+      margin: 0 auto;
+      transform-style: preserve-3d;
+      will-change: transform;
+      clip-path: inset(0 0 0 0);
+    }
+    
+    .m {
+      margin-bottom: 200px;
+      top: 70%;
+    }
+    
+    .hills1 {
+      z-index: 3;
+      width: 100%;
+      height: 150px;
+      transform-origin: center;
+      animation: wave 10s infinite linear;
+    }
+    
+    .hills2 {
+      z-index: 2;
+      width: 120%;
+      left: -10%;
+      transform-origin: center;
+      animation: wave 15s infinite linear;
+    }
+    
+    .hills3 {
+      z-index: 1;
+      width: 130%;
+      left: -20%;
+      transform-origin: center;
+      animation: wave 20s infinite linear;
+    }
+    
+    @keyframes wave {
+      0% {
+          transform: translateY(0) rotate(0deg);
+      }
+      50% {
+          transform: translateY(15px) rotate(1deg) translateX(1px);
+      }
+      75% {
+          transform: translateY(15px) rotate(-1deg) translateX(-1px);
+      }
+      100% {
+          transform: translateY(0) rotate(0deg);
+      }
+    }
   .lang-button {
     background-color: #388e3c;
     color: white;
@@ -190,6 +259,25 @@
     border-radius: 15px;
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
     color: #444;
+  }
+  .footer .social-icons {
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
+    margin-right: 60px;
+    margin-bottom: 20px;
+  }
+  
+  .footer .social-icons a {
+    margin-left: 10px;
+    color: white;
+    font-size: 24px;
+    text-decoration: none;
+    font-size: 36px;
+  }
+  
+  .footer .social-icons a:hover {
+    color: #4CAF50;
   }
   .content-container img {
     width: 48%;
