--- a/src/css/index.css
+++ b/src/css/index.css
@@ -99,6 +99,7 @@ html, body {
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
   margin-top: 50px;
   overflow: hidden;
+  background-color: #41b547;
 }
 
 .hero-images {
@@ -118,11 +119,11 @@ html, body {
   height: 100%;
   object-fit: cover;
   position: absolute;
-  animation: slideIn 8s infinite;
-  background: rgb(0, 0, 0);
-  opacity: 1;
-  will-change: transform;
+  animation: slideIn 15s infinite;
+  opacity: 0; 
+  transition: opacity 1s ease-in-out; 
 }
+
 
 .hero-images img:nth-child(1) {
   animation-delay: 0s;
@@ -130,19 +131,20 @@ html, body {
 }
 
 .hero-images img:nth-child(2) {
-  animation-delay: 11s;
+  animation-delay: 5s;
   z-index: 3;
 }
 
 .hero-images img:nth-child(3) {
-  animation-delay: 11s;
+  animation-delay: 10s;
   z-index: 2;
 }
 
 .hero-images img:nth-child(4) {
-  animation-delay: 6s;
+  animation-delay: 15s;
   z-index: 1;
 }
+
 
 .hero::after {
   content: '';
@@ -163,21 +165,27 @@ html, body {
 
 @keyframes slideIn {
   0% {
-    transform: translateX(-100%); 
+    transform: translateX(100%);
+    opacity: 0;
   }
   25% {
-    transform: translateX(0); 
+    transform: translateX(0);
+    opacity: 1;
   }
   50% {
-    transform: translateX(0); 
+    transform: translateX(0);
+    opacity: 1;
   }
   75% {
-    transform: translateX(100%);
+    transform: translateX(-100%);
+    opacity: 0;
   }
   100% {
-    transform: translateX(100%);
+    transform: translateX(-100%);
+    opacity: 0;
   }
 }
+
 
 .hero p {
   font-size: 1.5em;
